<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="the_simpsons">The Simpsons</string>
    <string name="_7_8">7.8</string>
    <string name="imagebutton">imagebutton</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_a_account">already have a account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_a_account">dont have a account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="user_name">Khansa Aulia Fauzah</string>
    <string name="email_user">khansaulfa@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="edi_account">Edi Account</string>
    <string name="change_account">Change Account</string>
    <string name="language">Language</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="privacy_and_setting_help">Privacy and Setting Help</string>
    <string name="movie_of_the_week">Movie of the Week</string>
    <string name="please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="imageview">imageview</string>
    <string name="april_24_2019">April 24 ,2019</string>
    <string name="end_game">End Game</string>
    <string name="please_sign_in_to_continue">Please Sign In to continue</string>
    <string name="password">Password</string>
    <string name="jan_4_2020">jan 4, 2020</string>
    <string name="action">Action</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="family">Family</string>
    <string name="all">All</string>
    <string name="_8_3">8.3</string>
    <string name="date">April 24 2019</string>
    <string name="text_1">Movies</string>
    <string name="error_text">Not empty</string>
    <string name="txt_sinopsis">The Simpsons Movie is a 2007 animated comedy film adapted from the television series The Simpsons. The film was produced by James L. Brooks, Matt Groening, Al Jean, Mike Scully, and Richard Sakai and was written by eleven writers for the television series. The voice of the character is filled by the voice actors of the series plus guest stars Albert Brooks, Tom Hanks, and Green Day.</string>
    <string name="genre">Genre</string>
    <string name="trailer">Trailer</string>
    <string name="rating">Rating</string>
    <string name="family_animation_comedy">Family,Animation,Comedy</string>
    <string name="_26_july_2007">26 July ‎2007‎</string>
    <string name="release_date">Release Date</string>
    <string name="txt_first">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique vel egestas neque elit sagittis vitae et vel aenean.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="txt_second">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique vel egestas neque elit sagittis vitae et vel aenean.</string>
    <string name="txt_third">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique vel egestas neque elit sagittis vitae et vel aenean.</string>
    <string name="get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="text_error_message">Error</string>
    <string name="text_message_password">Please Input Your Password</string>
    <string name="text_user">Users</string>
    <string name="text_message_email">Please Input Your Email</string>
    <string name="text_message_username">Please Input Your Username</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
</resources>