<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_tab"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_20dp"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_main"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_highlight"
            android:layout_width="144dp"
            android:layout_height="200dp"
            android:layout_marginTop="56dp"
            android:background="@color/white"
            android:contentDescription="@string/imageview"
            android:scaleType="centerCrop"
            android:src="@drawable/img2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_movie" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_movie"
            tools:layout_editor_absoluteY="481dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </HorizontalScrollView>


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/jan_4_2020"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_main"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_main"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_main"
            app:layout_constraintVertical_bias="0.451" />

        <TextView
            android:id="@+id/tv_subtitle_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/movie_of_the_week"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_main" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/the_simpsons"
            app:layout_constraintEnd_toEndOf="@+id/iv_highlight"
            app:layout_constraintStart_toStartOf="@+id/iv_highlight"
            app:layout_constraintTop_toBottomOf="@+id/iv_highlight" />

        <TextView
            android:id="@+id/tv_date_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_26_july_2007"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_movie" />

        <TextView
            android:id="@+id/tv_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/animation"
            app:layout_constraintStart_toEndOf="@+id/tv_all"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_movie" />

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/action"
            app:layout_constraintStart_toEndOf="@+id/tv_animation"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_movie" />

        <TextView
            android:id="@+id/tv_comedy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/comedy"
            app:layout_constraintStart_toEndOf="@+id/tv_action"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_movie" />

        <TextView
            android:id="@+id/tv_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/family"
            app:layout_constraintStart_toEndOf="@+id/tv_comedy"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>