<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/ib_back_detail"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@drawable/button"
            android:src="@drawable/ic_baseline_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_630dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_back_detail">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/the_simpsons"
                android:textColor="@color/darkblue"
                android:textSize="@dimen/_24sp" />

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="160dp"
                android:layout_height="@dimen/_240dp"
                android:layout_below="@+id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img2" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_poster"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/_14sp"
                android:maxLines="4"
                android:text="@string/txt_sinopsis"
                android:textColor="@color/darkblue" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_synopsis"
                android:layout_alignParentStart="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="18dp"
                android:text="@string/release_date"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_release_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_release"
                android:layout_alignStart="@+id/tv_release"
                android:layout_marginStart="21dp"
                android:textSize="@dimen/_14sp"
                android:layout_marginTop="8dp"
                android:text="@string/_26_july_2007" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_synopsis"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="42dp"
                android:text="@string/genre"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_genre"
                android:layout_alignEnd="@+id/tv_genre"
                android:layout_marginTop="7dp"
                android:textSize="@dimen/_14sp"
                android:layout_marginEnd="-27dp"
                android:text="@string/family_animation_comedy" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="76dp"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_release_movie"
                android:layout_alignEnd="@+id/tv_release_movie"
                android:layout_alignParentStart="true"
                android:layout_marginStart="38dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="-38dp"
                android:text="@string/rating"
                android:textColor="#000000"
                android:textSize="@dimen/_20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_rating"
                android:layout_alignStart="@+id/tv_rating"
                android:layout_alignEnd="@+id/tv_rating"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/_14sp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="-15dp"
                android:text="@string/_7_8" />

            <ImageView
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_alignEnd="@+id/textView9"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="78dp"
                app:srcCompat="@drawable/ic_baseline_play_circle_outline_24" />

            <TextView
                android:id="@+id/tv_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_genre"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="63dp"
                android:layout_marginEnd="52dp"
                android:text="@string/trailer" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>